--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,13 @@
     <string name="asteroid_button">Asteroid Watcher</string>
     <string name="mars_weather_button">Mars Weather</string>
 
+    <string name="mars_weather_activity_title">Weather at Elysium Planitia</string>
+    <string name="sol_text">Sol</string>
+    <string name="high_temp">High:</string>
+    <string name="avg_temp">Avg:</string>
+    <string name="low_temp">Low:</string>
+    <string name="degrees_f">°F</string>
+
+
     <string name="API_KEY">YJAnaNuLHrKq9uW8cYvNkeAnuBbA6CitHSlShwCp</string>
 </resources>
